# solar-fault-detective

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: communication.mdc  continuous-learning-adaptation.mdc  core-persona-approach.mdc  core-research-standards.mdc  diagnostic-documentation.mdc  documentation.mdc  dry.mdc  error-handling.mdc  execution.mdc  notebook-hygiene.mdc  proactive-foresight-system-health.mdc  python-uv-quality.mdc  raw-data-immutability.mdc  research-planning.mdc  safety-approval-guidelines.mdc  self_improve.mdc  verification-quality-assurance.mdc
docs/: 00_project_overview.md  10_data_audit.md  20_physics_baseline.md  30_efficiency_analysis.md  40_comparative_diagnostics.md
notebooks/EDA/: EDA_1.ipynb
src/solar_diagnostic/: paths.py
