[project]
name = "solar-diagnostic"
version = "0.1.0"
description = "Solar yield and fault diagnostic analysis for Kaggle solar plant data"
authors = [{ name = "Ben Engelman", email = "benengelman@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pandas>=2.2.0,<3.0.0",
    "numpy>=2.0.0,<3.0.0",
    "ipykernel>=7.2.0,<8.0.0",
    "matplotlib>=3.10.8,<4.0.0",
    "seaborn>=0.13.2,<0.14.0",
]

[dependency-groups]
dev = [
    "black>=25.0.0",
    "ruff>=0.13.0",
]

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solar_diagnostic"]

[tool.black]
line-length = 100
target-version = ["py313"]
extend-exclude = "\\.ipynb$"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["**/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
